--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": ">=7.5.0"
   },
   "dependencies": {
+    "eslint-plugin-async-await": "0.0.0",
     "is-promise": "^2.1.0",
     "methods": "^1.1.2"
   },
@@ -22,6 +23,8 @@
     "chai-http": "^3.0.0",
     "coveralls": "^3.0.0",
     "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0",
     "express": "^4.16.2",
     "mocha-lcov-reporter": "^1.3.0"
   }
