--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-exorcism",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Express.js router wrapper for async routes",
   "author": "Andrew G Kuznetsov <cav@cav.ru>",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "promise",
     "async",
     "router",
+    "routes",
     "promisify",
     "asynchronous",
     "wrapper",
@@ -34,6 +35,7 @@
     "node": ">=7.5.0"
   },
   "dependencies": {
+    "fs-extra": "^5.0.0",
     "is-promise": "^2.1.0",
     "methods": "^1.1.2"
   },
