--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-exorcism",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "Express.js router wrapper for async routes",
   "author": "Andrew G Kuznetsov <cav@cav.ru>",
   "license": "MIT",
@@ -26,17 +26,18 @@
     "es6",
     "es7"
   ],
-  "main": "lib/express-exorcism.js",
+  "main": "src/express-exorcism.js",
   "scripts": {
     "test": "mocha",
+    "test_with_coverage": "nyc mocha -t 10000",
+    "lint": "eslint src",
+    "check_coverage": "nyc check-coverage --lines 50 --functions 40 --branches 10",
     "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "engines": {
     "node": ">=7.5.0"
   },
   "dependencies": {
-    "fs-extra": "^5.0.0",
-    "is-promise": "^2.1.0",
     "methods": "^1.1.2"
   },
   "devDependencies": {
@@ -44,7 +45,15 @@
     "chai-http": "^3.0.0",
     "coveralls": "^3.0.0",
     "eslint": "^4.14.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "express": "^4.16.2",
-    "mocha-lcov-reporter": "^1.3.0"
+    "istanbul": "^0.4.5",
+    "mocha": "^5.0.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^11.4.1"
   }
 }
